Fix overflow issue

--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ html {
 }
 
 body {
+  overflow-x: hidden;
   min-height: 100%;
   background:
     url(images/lines.png) no-repeat right 10% top 10%,
